fix footer button spacing for mobile

--- a/public/css/pattern-library.css
+++ b/public/css/pattern-library.css
@@ -5011,7 +5011,7 @@ a#open-menu {
       width: 40px;
       overflow: hidden;
       text-indent: -999em;
-      margin-right: 8px; }
+      margin-right: 4px; }
     #footer .social a:hover {
       opacity: 0.8; }
     #footer .social a.tw {
