--- a/scss-new/components/_footer.scss
+++ b/scss-new/components/_footer.scss
@@ -162,7 +162,7 @@
 			width: 40px;
 			overflow: hidden;
 			text-indent: -999em;
-			margin-right: 8px;
+			margin-right: 4px;
 		}
 
 		a:hover {
